<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/main_tb_layout"
        style="@style/TopBar_Style"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/black_deep">

        <TextView
            android:id="@+id/tv_cancel_create_room"
            style="@style/Left_Title_Txt"
            android:text="@string/str_cancel_create"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            style="@style/Title_Txt"
            android:text="@string/str_rent_rooms"
            android:textColor="#ffffff"
            android:textSize="@dimen/top_bar_text_size"
            android:textStyle="normal" />

        <ImageButton
            android:id="@+id/ibtn_join_meeting"
            style="@style/Btn_right"
            android:paddingRight="15dp"
            android:src="@drawable/btn_invite" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_tb_layout"
        android:layout_marginBottom="@dimen/btn_create_room_height"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_create_room"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/str_hintm"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/largest_most_txt_size"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_alpha_half">

            <org.dync.teameeting.widgets.MyListView
                android:id="@+id/lv_listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:headerDividersEnabled="true"
                android:scrollbars="none" />


            <include
                android:id="@+id/empty_layout"
                layout="@layout/list_empty_layout" />
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_get_room"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_create_room_height"
        android:layout_alignParentBottom="true"

        android:background="@drawable/btn_get_room"
        android:text="@string/str_get_room"
        android:textColor="@color/white"
        android:textSize="@dimen/largest_most_txt_size" />

</RelativeLayout>