<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/grey"
    android:orientation="vertical" >

	<ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/view_no_internet"
	    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_no_internet_connection"
        android:ellipsize="end"
        android:maxWidth="140dp"
        android:singleLine="true"
        android:textColor="@color/black_deep"
        android:textSize="@dimen/largest_most_txt_size" />
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_no_internet_tip"
        android:ellipsize="end"
        android:maxWidth="140dp"
        android:layout_gravity="center"
        android:gravity="center" 
        android:textColor="@color/black_deep"
        android:textSize="@dimen/middle_txt_size" />
    
    <Button 
        android:id="@+id/btn_connect_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_get_room"
        android:text="@string/str_connect_internet"
        android:ellipsize="end"
        android:maxWidth="140dp"
        android:gravity="center" 
        android:textColor="@color/white"
        android:textSize="@dimen/largest_most_txt_size"
        />

</LinearLayout>