<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/popup_bg_sire" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/popup_bg2"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/ibtn_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/popup_close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/str_invite_people_to_room"
                android:textSize="@dimen/largest_most_txt_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageButton
                        android:id="@+id/ibtn_message"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/popup_ems" />

                    <TextView
                        android:id="@+id/tv_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/str_message"
                        android:textSize="@dimen/middle_txt_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageButton
                        android:id="@+id/ibtn_weixin"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/popup_weixin" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/str_weixin"
                        android:textSize="@dimen/middle_txt_size" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/str_copy_link_invite"
                android:textSize="@dimen/larger_txt_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_copy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/popup_copy_text"
                android:gravity="center_vertical|center_horizontal"
                android:text="cnblogs.com/sunzn"
                android:singleLine="true"
                android:padding="5dp"
                android:ellipsize="middle"
                android:textSize="@dimen/larger_txt_size" />

            <Button
                android:id="@+id/btn_copy"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@color/black_gray"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/str_copy"
                android:textColor="@color/white"
                android:textSize="@dimen/largest_txt_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>